app/assets/stylesheets/styles/_dark-mode.scss
$bs_dark_mode_text_color: #DEE2E6;
$bs_dark_mode_background_color: #212529;
$dark_mode_link: #D4AF37;
$dark_mode_link_hover: #E8C547;

html[data-bs-theme="dark"] {

  .select2-dropdown {
    background-color: $bs_dark_mode_background_color;
  }

  #littlesis-body {
    h1, h2, h3, h4 {
      color: $dark_mode_link;
    }

    a {
      color: $dark_mode_link;

      &:hover {
        color: $dark_mode_link_hover;
      }
    }

    #footer {
      color: $bs_dark_mode_text_color;
    }

    .btn-primary {
      background-color: $dark_mode_link;
      color: $bs_dark_mode_background_color;
    }

    .datagrid-form,
    .datagrid-table th {
      background-color: $bs_dark_mode_background_color;
    }

    // Entities
    #entity-profile-page-header {
      #action-buttons a,
      #action-buttons form button {
        color: $bs_dark_mode_text_color;
        background-color: $bs_dark_mode_background_color;
      }
    } 
    #entity-profile-page {
      .profile-page-tabs a,
      #entity-edited-history {
        color: $bs_dark_mode_text_color;
      }
      .profile-page-grouped-link:hover {
        background-color: #323539;
      }
    }


    // Lists
    .bg-info {
      background-color: $bs_dark_mode_background_color!important;
    }
    .list-access-level-help {
      color: $bs_dark_mode_text_color;
    }
    #datatable-filters {
      background-color: $bs_dark_mode_background_color;
    }
    #list-tab-menu li.tab a,
    #datatable-filters a.btn {
      color: $bs_dark_mode_text_color;
    }

    #tag-show-container #tagable-lists .tagable-list .tagable-list-items .tagable-list-item .tagable-list-item-sort-info {
      background-color: #2B3035;
    }

    // Oligrapher
    #oligrapher-container {
      #toggle-action-menu svg {
        fill: $bs_dark_mode_text_color!important;
      }
      #oligrapher-graph-container {
        #oligrapher-zoomcontrol button {
          background-color: $bs_dark_mode_background_color;
        }
        text[fill] {
          fill: #999!important;
        }
        text[fill]:hover {
          fill: $bs_dark_mode_text_color!important;
        }
        rect[fill] {
          fill: none!important;
        }
        path.edge-path-selected {
          stroke: $bs_dark_mode_text_color!important;
        }
      }
      .annotation-list-item,
      .oligrapher-annotation-highlighting-tip,
      .oligrapher-user-message,
      .ck-content.ck-editor__editable {
        background-color: $bs_dark_mode_background_color;
      }
      #oligrapher-annotation-form-header {
        color: $bs_dark_mode_text_color;
      }
    }

    // Admin
    #user-request-description {
      background-color: $bs_dark_mode_background_color;
    }
  }
}

